cmake_minimum_required(VERSION 3.24)
project(Saori C)

set(CMAKE_C_STANDARD 11)

add_executable(Saori main.c 1.TwoSum/解法一：暴力解法/twoSum_solution_1.h 1.TwoSum/解法一：暴力解法/twoSum_solution_1.c 1.TwoSum/runTwoSum.c 1.TwoSum/runTwoSum.h 1.TwoSum/解法二：哈希表解法/twoSum_solution_2.c 1.TwoSum/解法二：哈希表解法/twoSum_solution_2.h)
